# kino_poisk_api

./: README.md  config.py  main.py  pyproject.toml
models/: __init__.py  database.py  user.py
routers/: __init__.py  auth.py  movies.py
schemas/: __init__.py  user.py
utils/: __init__.py  deps.py  jwt.py
