[tool.poetry]
name = "kino-poisk-api"
version = "0.1.0"
description = ""
authors = ["gafurov001 <fakhriddingafurv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jinja2 = "^3.1.4"
asyncpg = "^0.30.0"
python-multipart = "^0.0.17"
greenlet = "^3.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
